--- a/app/css/bootstrap.css
+++ b/app/css/bootstrap.css
@@ -12,6 +12,13 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+
+@font-face {
+	font-family: 'Hasklig';
+	src: url('./font/Hasklig-Regular.otf');
+	src: local('Hasklig Regular'), local('Haslkig'), url('./font/Hasklig-Regular.otf') format('truetype');
+}
+
 html {
 	font-family: sans-serif;
 	-ms-text-size-adjust: 100%;
