Indev v0.2.0: Completely reorganized the way the directories are sorted. Closes #6

--- a/app/source/scripts/css/bootstrap.css
+++ b/app/source/scripts/css/bootstrap.css
@@ -15,7 +15,7 @@
 
 @font-face {
 	font-family: Hasklig;
-	src: url("../font/Hasklig-Regular.otf") format("opentype");
+	src: url("../../resources/fonts/Hasklig-Regular.otf") format("opentype");
 }
 html {
 	font-family: sans-serif;
