--- a/source/scripts/css/blockade.css
+++ b/source/scripts/css/blockade.css
@@ -34,3 +34,9 @@
 	padding-left: 0.6em;
 	padding-right: 0.6em;
 }
+
+textarea {
+	background-color: #444 !important;
+	color: white !important;
+	resize: none;
+}
