--- a/source/scripts/css/blockade.css
+++ b/source/scripts/css/blockade.css
@@ -35,7 +35,7 @@
 	padding-right: 0.6em;
 }
 
-textarea {
+input, textarea {
 	background-color: #444 !important;
 	color: white !important;
 	resize: none;
