--- a/source/scripts/css/play.css
+++ b/source/scripts/css/play.css
@@ -11,6 +11,13 @@
 	height: 100%;
 }
 
+.selected {
+	height: 100%;
+	border-style: solid;
+	border-color: white;
+	border-radius: 5px;
+}
+
 .selector {
 	pointer-events: visible;
 	width: 50px;
